<resources xml:tools="http://schemas.android.com/tools">
    <string name="app_name">LCT</string>
    <string name="name">Name:</string>
    <string name="do_you_have_an_acc">Do you have an acc?</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="selected_item">Selected item:</string>
    <string name="select_country">Select Country:</string>
    <string name="country">Country</string>
    <string name="email_id">Email Id…</string>
    <string name="_7xxxxxx">7xxxxxx</string>
    <string name="invoice_no">Invoice No</string>
    <string name="amount_used">Amount Used</string>
    <string name="service_provider">Service Provider</string>
    <string name="basket_used">Basket used</string>
    <string name="search">search</string>
    <string name="enter_member_no">enter member no</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="benefit_balance">Benefit Balance</string>
    <string name="member_details">Member Details</string>
    <string name="faq_s">FAQ\'S</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="phone_number">Phone number</string>
    <string name="member_no">member no</string>
    <string name="phone_number_254">phone_number(+254)</string>
    <string name="phonenumber_254">phonenumber(254)</string>
    <string name="please_enter_memberno">Please Enter MemberNo</string>
    <string name="do_you_have_a_liaison_account">Do you have a Liaison account</string>
    <string name="verify">Verify</string>
    <string name="email_address">Email Address</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="set_password">Set Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="scheme">Scheme</string>
    <string name="outpatient_status">Outpatient Status</string>
    <string name="status">Status:</string>
    <string name="member_type">Member Type</string>
    <string name="member_number">Member Number</string>
    <string name="lct_africa">LCT Africa</string>
    <string name="out_patient_dental">OUT PATIENT DENTAL</string>
    <string name="limit_amount">Limit Amount</string>
    <string name="expediture">Expediture</string>
    <string name="balance">Balance</string>
    <string name="out_patient_overall">OUT PATIENT OVERALL</string>
    <string name="out_patient_optical">OUT PATIENT OPTICAL</string>
    <string name="expenditure">Expenditure</string>
    <string name="member_number_123456_00">member number:– 123456–00</string>
    <string name="already_registered">Already Registered?</string>
    <string name="log_in">log in</string>
    <string name="do_you_have_a_lct_account">Do you have a LCT account?</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="category">Category:</string>
    <string name="program_name">Program Name</string>
    <string name="service">Service:</string>
    <string name="voucher_name">Voucher Name</string>
    <string name="allocation">Allocation:</string>
    <string name="full_name">full_Name</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="dateofbirth">dateOfBirth</string>
    <string name="gender">Gender:</string>
    <string name="membership">Membership:</string>
    <string name="scheme_name">Scheme Name:</string>
    <string name="dependants_list">Dependants list:</string>
    <string name="dependent">dependent</string>
    <string name="benefit_payer">Benefit Payer:</string>
    <string name="payer">PAYER</string>
    <string name="date">Date :</string>
    <string name="amount">Amount :</string>
    <string name="provider">Provider :</string>
    <string name="click_to_select_start_date">Click to select start date</string>
    <string name="to">to</string>
    <string name="click_to_select_end_date">Click to select end date</string>
    <string name="preview">preview</string>
    <string name="memberno">memberNo</string>
    <string name="voucher_value">Voucher Value</string>
    <string name="log_out">logout</string>
    <string name="member_no_123456_00">member_no:–123456–00</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="transaction_history">Transaction History</string>
    <string name="service_balance">Service Balance</string>
    <string name="otp">OTP</string>
    <string name="signup">SignUp</string>
    <string name="outpatient_fragment">Outpatient Fragment</string>
    <string name="Inpatient_fragment">Inpatient Fragment</string>
    <string name="Complementary_fragment">Movie Fragment</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="outpatient_health_checkup">OUTPATIENT HEALTH CHECKUP</string>
    <string name="in_patient_congenital_childbrith">IN PATIENT CONGENITAL/CHILDBRITH</string>
    <string name="Registration">REGISTRATION</string>
    <string name="full_Name">Full Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="phone_number_0701234567">Phone Number(0701234567)</string>
    <string name="EmailId">Email</string>
    <string name="passport_A1234567">Passport(A1234567)</string>
    <string name="nhif_no">NHIF Number</string>
    <string name="Identification_number">ID number</string>
    <string name="register">Self Register</string>
    <string name="already_signed_up">Already Signed up?</string>
    <string name="idPassPortNo">ID/Passport Number</string>
    <string name="registerNow">Register</string>
    <string name="greetings">Greetings</string>
    <string name="dependants">Dependants</string>
    <string name="select_insurer">Select Insurer</string>
    <string name="proceed">PROCEED</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_id_number">Enter Id number</string>
    <string name="next">Next</string>
    <string name="do_you_have_a_lct_account_sign_up">Do you have a lct account ? Sign up</string>
    <string name="login_button">Login Button</string>
    <string name="productname">productName</string>
    <string name="about_lct">About LCT</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="use_your_biometrics_to_sign_in">Use your biometrics to sign in</string>
    <string name="switch_account">Switch Account</string>

</resources>








