<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context="com.lctapp.lct.Activities.ResetPassword">

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_width="match_parent" >-->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/lctpng"
            app:layout_constraintBottom_toTopOf="@id/memb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"/>



        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/oneTimePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:inputType="number"
            android:hint="@string/enter_the_otp"
            android:maxLength="5"
            android:textColorHint="#000000"
            app:layout_constraintBottom_toTopOf="@id/btnSetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Password" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/memb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittex_shape"
            android:hint="@string/member_no"
            android:inputType="number"
            android:digits="1234567890-"
            android:maxLength="11"
            android:visibility="invisible"
            android:textColorHint="#000000"
            app:layout_constraintBottom_toTopOf="@id/Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:textColorHint="#000000"
            android:inputType="textPassword|textNoSuggestions"
            app:layout_constraintBottom_toTopOf="@+id/oneTimePassword"
            app:layout_constraintTop_toBottomOf="@+id/memb" />

        <Button
            android:id="@+id/btnSetPassword"
            android:layout_width="310dp"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape"
            android:text="@string/set_password"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/oneTimePassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

