<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".Activities.OneTimePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/otp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:background="#3700B3"
            android:visibility="visible"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:src="@drawable/lct_logo"
        app:layout_constraintBottom_toTopOf="@+id/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/txtOTP"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_the_otp"
        android:textColorHint="#000000"
        android:inputType="number"
        android:digits="1234567890"
        android:maxLength="5"
        app:layout_constraintBottom_toTopOf="@+id/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/edittex_shape"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:textColorHint="#000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/txtOTP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/verify"
        android:textColor="#ffffff"
        android:background="@drawable/button_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtOTP"/>
</androidx.constraintlayout.widget.ConstraintLayout>