<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".Activities.ForgotPassword">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/lctpng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>


    <!--    <EditText-->
    <!--        android:id="@+id/Password"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:layout_marginTop="1dp"-->
    <!--        android:ems="10"-->
    <!--        android:background="@drawable/edittex_shape"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:hint="@string/enter_new_password"-->
    <!--        android:textColor="#000000"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/EmailId"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/btnReset"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--         />-->
    <EditText
        android:id="@+id/member"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp"
        android:digits="1234567890-"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_member_no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="310dp"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/verify"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member"/>
</androidx.constraintlayout.widget.ConstraintLayout>