<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/edittex_shape"
    android:scrollbarStyle="insideInset"
    tools:context=".Activities.TransactionActivity"
    android:backgroundTint="@color/white">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:height="50dp"
                android:background="@drawable/edittex_shape"
                android:gravity="center"
                android:hint="@string/click_to_select_start_date"
                android:textColorHint="#000000"
                android:textStyle="bold"
                android:visibility="visible"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/to"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:text="@string/to" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:height="50dp"
                android:background="@drawable/edittex_shape"
                android:gravity="center"
                android:hint="@string/click_to_select_end_date"
                android:textColorHint="#000000"
                android:textStyle="bold"
                android:visibility="visible"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preview Transactions for:"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/doInBackground"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/button_shape"
                    android:text="Individual"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/doInBackgrnd"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button_shape"
                    android:text="FAMILY"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>


        <ListView
            android:id="@+id/mylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"/>

    </LinearLayout>